--- a/style.css
+++ b/style.css
@@ -43,16 +43,16 @@ p {
 [class^="icon-"],
 [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family                                 : 'icomoon' !important;
-    /* speak                                    : never; */
-    font-style                                  : normal;
-    font-weight                                 : normal;
-    font-variant                                : normal;
-    text-transform                              : none;
-    line-height                                 : 1;
+    font-family                                    : 'icomoon' !important;
+    /* speak                                       : never; */
+    font-style                                     : normal;
+    font-weight                                    : normal;
+    font-variant                                   : normal;
+    text-transform                                 : none;
+    line-height                                    : 1;
     /* Better Font Rendering =========== */
-    -webkit-font-smoothing                      : antialiased;
-    -moz-osx-font-smoothing                     : grayscale;
+    -webkit-font-smoothing                         : antialiased;
+    -moz-osx-font-smoothing                        : grayscale;
 }
 
 .icon-logout:before {
@@ -105,17 +105,20 @@ section {
     left        : 50%;
     transform   : translateX(-50%);
 
-    padding   : 10px 30px;
-
-    font-size   : 2rem;
-
-    border-radius      : 0 0 15px 15px;
-    background-color   : white;
-
     display           : flex;
     justify-content   : space-between;
     align-items       : center;
 
+    width: 90vw;
+    max-width: 1728px;
+
+    font-size   : 2rem;
+
+    padding   : 10px 30px;
+
+    border-radius      : 0 0 15px 15px;
+    background-color   : white;
+    
     z-index   : 100;
 }
 
