--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ section {
     justify-content   : space-between;
     align-items       : center;
 
-    width: 90vw;
+    width: 90%;
     max-width: 1728px;
 
     font-size   : 2rem;
