--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ html {
     color              : var(--gr-text-color);
     font-family        : var(--rubik-font);
     background-color   : var(--main-bg-color);
-    font-size          : 10px;
+    /* font-size          : 10px; */
+    font-size          : 0.5208333333333333vw;
 }
 
 h1 {
@@ -43,16 +44,16 @@ p {
 [class^="icon-"],
 [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family                                    : 'icomoon' !important;
-    /* speak                                       : never; */
-    font-style                                     : normal;
-    font-weight                                    : normal;
-    font-variant                                   : normal;
-    text-transform                                 : none;
-    line-height                                    : 1;
+    font-family                                                : 'icomoon' !important;
+    /* speak                                                   : never; */
+    font-style                                                 : normal;
+    font-weight                                                : normal;
+    font-variant                                               : normal;
+    text-transform                                             : none;
+    line-height                                                : 1;
     /* Better Font Rendering =========== */
-    -webkit-font-smoothing                         : antialiased;
-    -moz-osx-font-smoothing                        : grayscale;
+    -webkit-font-smoothing                                     : antialiased;
+    -moz-osx-font-smoothing                                    : grayscale;
 }
 
 .icon-logout:before {
@@ -109,8 +110,8 @@ section {
     justify-content   : space-between;
     align-items       : center;
 
-    width: 90%;
-    max-width: 1728px;
+    width       : 90%;
+    max-width   : 1728px;
 
     font-size   : 2rem;
 
@@ -118,7 +119,7 @@ section {
 
     border-radius      : 0 0 15px 15px;
     background-color   : white;
-    
+
     z-index   : 100;
 }
 
@@ -193,15 +194,12 @@ section {
 /* MAIN SLIDE */
 
 .mainslide {
-    display           : flex;
-    justify-content   : space-between;
-    align-items       : center;
-
     min-height   : 100vh;
 }
 
 .mainslide>div {
-    display   : flex;
+    display           : flex;
+    justify-content   : stretch;
 }
 
 .mainslide__left>* {
@@ -213,9 +211,14 @@ section {
     flex-direction   : column;
     align-items      : center;
 
+
     width   : max-content;
 
     text-align   : center;
+}
+
+.mainslide__right {
+    width   : 100%;
 }
 
 .main__title>span {
@@ -371,6 +374,10 @@ section {
 
 
 
+
+
+
+
 /* WHO WE ARE */
 
 .whoweare {
@@ -420,7 +427,7 @@ section {
 
 @media (max-width: 1600px) {
     html {
-        font-size   : 8px;
+        /* font-size   : 8px; */
     }
 }
 
@@ -430,18 +437,20 @@ section {
     }
 
     html {
-        font-size   : 7px;
+        /* font-size   : 7px; */
     }
 }
 
 
 @media (max-width: 1100px) {
-    section {
+
+    /* section:not(:first-child):not(:last-child) { */
+    section:not(:first-of-type) {
         padding   : 50px 0;
     }
 
     html {
-        font-size   : 6px;
+        /* font-size   : 6px; */
     }
 }
 
