--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	--logo-color:                #007aa9;
 	--gr-text-color:             #2b2e36;
 	--line-transp-blue-color:    #bdcfe4;
+	--blue:                      #57BDDB;
 	--opsans-font:               "Open Sans", sans-serif;
 	--rubik-font:                "Rubik", sans-serif;
 }
@@ -13,6 +14,7 @@ html {
 	font-family:         var(--rubik-font);
 	color:               var(--gr-text-color);
 	font-size:           10px;
+	line-height:         1.3;
 }
 
 h1 {
@@ -25,9 +27,25 @@ h2 {
 	font-weight:    700;
 }
 
+h4 {
+	font-size:    3rem;
+}
+
+bold,
+.bold {
+	font-weight:    700;
+}
+
+semibold,
+.semibold {
+	font-weight:    500;
+}
+
 p {
 	font-size:    2.4rem;
 }
+
+/* BUTTON 1 */
 
 .button {
 	position:            relative;
@@ -36,14 +54,14 @@ p {
 	overflow:            hidden;
 	background-color:    #007AA926;
 	padding:             8px 25px;
-	border-radius:       15px;
+	border-radius:       20px;
 	min-width:           max-content;
 	color:               var(--logo-color);
 	transition:          all .2s linear;
 }
 
 .button:hover {
-	color:    white;
+	color:    white !important;
 }
 
 .button::before {
@@ -61,7 +79,7 @@ p {
 }
 
 .button:hover::before {
-	border-radius:    15px;
+	border-radius:    20px;
 	bottom:           0;
 	width:            100%;
 	height:           100%;
@@ -71,51 +89,127 @@ p {
 	z-index:    2;
 }
 
+/* BUTTON 2 */
+
+.button2 {
+	position:            relative;
+	display:             flex;
+	align-items:         center;
+	background-color:    var(--logo-color);
+	padding:             8px 25px;
+	border-radius:       20px;
+	min-width:           max-content;
+	color:               white;
+	transition:          all .2s ease;
+	z-index:             2;
+}
+
+.button2:hover {
+	transform:     scale(1.08);
+	box-shadow:    0 0 10px var(--blue);
+}
+
+
 /* SVG */
 @font-face {
-	font-family: 'icofont';
-	src:  url('fonts/icofont.eot?sm00wg');
-	src:  url('fonts/icofont.eot?sm00wg#iefix') format('embedded-opentype'),
-	  url('fonts/icofont.ttf?sm00wg') format('truetype'),
-	  url('fonts/icofont.woff?sm00wg') format('woff'),
-	  url('fonts/icofont.svg?sm00wg#icofont') format('svg');
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;
-  }
-  
-  i {
+	font-family:    'icofont';
+	src:            url('fonts/icofont.eot?xr2yyz');
+	src:            url('fonts/icofont.eot?xr2yyz#iefix') format('embedded-opentype'),
+		url('fonts/icofont.ttf?xr2yyz') format('truetype'),
+		url('fonts/icofont.woff?xr2yyz') format('woff'),
+		url('fonts/icofont.svg?xr2yyz#icofont') format('svg');
+	font-weight:     normal;
+	font-style:      normal;
+	font-display:    block;
+}
+
+i {
 	/* use !important to prevent issues with browser extensions that change fonts */
-	font-family: 'icofont' !important;
-	speak: never;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-  
+	font-family:       'icofont' !important;
+	speak:             never;
+	font-style:        normal;
+	font-weight:       normal;
+	font-variant:      normal;
+	text-transform:    none;
+	line-height:       1;
+
 	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-  }
-  
-  .icon-menu:before {
-	content: "\e900";
-  }
-  .icon-logout:before {
-	content: "\e901";
-  }
-  .icon-login:before {
-	content: "\e902";
-  }
+	-webkit-font-smoothing:     antialiased;
+	-moz-osx-font-smoothing:    grayscale;
+}
+
+.icon-vec1:before {
+	content:    "\e903";
+}
+
+.icon-vec2:before {
+	content:    "\e904";
+}
+
+.icon-vec3:before {
+	content:    "\e905";
+}
+
+.icon-vec4:before {
+	content:    "\e906";
+}
+
+.icon-vec5:before {
+	content:    "\e907";
+}
+
+.icon-menu:before {
+	content:    "\e900";
+}
+
+.icon-logout:before {
+	content:    "\e901";
+}
+
+.icon-login:before {
+	content:    "\e902";
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* CONTAINER */
 
-.container {}
+.container {
+	/* display:      block; */
+	margin:       0 auto;
+	padding:      50px 15px;
+	width:        calc(80% + 30px);
+	max-width:    1566px;
+}
 
-/* SECTION */
 
-section.section {}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* HEADER */
 
@@ -133,10 +227,6 @@ section.section {}
 	font-size:           1.8rem;
 	transform:           translateX(-50%);
 	z-index:             1000;
-}
-
-.header__nav {
-	display:    flex;
 }
 
 .header__nav>a:not(:last-child) {
@@ -174,16 +264,486 @@ section.section {}
 	font-size:    1.1em;
 }
 
+
+
+
 .header__auth>*:first-child {
 	margin-right:    5px;
 	font-size:       1.2em;
 }
 
 .header__menu {
-	line-height: 1;
-	font-size: 2rem;
-	display: none;
+	line-height:    1;
+	font-size:      2rem;
+	display:        none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* MAIN SECTION */
+
+.sec__main {
+	display:            flex;
+	justify-content:    center;
+	align-items:        center;
+	padding:            110px 15px 50px 15px;
+	min-height:         100vh;
+	font-size:          10px;
+	line-height:        1.2;
+}
+
+.sec__main__left {
+	display:           flex;
+	flex-direction:    column;
+	align-items:       center;
+	min-width:         max-content;
+	text-align:        center;
+}
+
+.sec__main__left>*:not(:last-child) {
+	margin-bottom:    40px;
+}
+
+.sec__main__line {
+	background-color:    var(--line-transp-blue-color);
+	border-radius:       40px;
+	height:              3px;
+}
+
+.sec__main__title {
+	font-size:    6.4em;
+}
+
+.sec__main__title>span {
+	color:    var(--logo-color);
+}
+
+.sec__main__desc,
+.sec__main__slog {
+	font-size:    4em;
+}
+
+.sec__main__left>button {
+	font-size:    3.6rem;
+	max-width:    max-content;
+	animation:    main_butt_anim 5s infinite linear;
+}
+
+.sec__main__left>button:hover {
+	animation:    none;
+}
+
+@keyframes main_butt_anim {
+	40% {
+		top:    0em;
+	}
+
+	43% {
+		top:    -0.9rem;
+	}
+
+	46% {
+		top:    0em;
+	}
+
+	48% {
+		top:    -0.4rem;
+	}
+
+	50% {
+		top:    0em;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* WHO WE ARE */
+
+.whoweare {
+	background-color:    white;
+}
+
+.whoweare__inner {
+	display:        flex;
+	align-items:    end;
+}
+
+.whoweare__img {}
+
+.whoweare__text {
+	text-align:     justify;
+	text-indent:    30px;
+	margin-left:    50px;
+}
+
+.whoweare__text span {
+	color:    var(--logo-color);
+}
+
+.whoweare__text>*:not(:last-child) {
+	margin-bottom:    1.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* WE DO */
+
+.wedo {
+	/* background-image: url(media/wedo.jpg) no-repeat; */
+	background:         url(media/wedo_filter_compressed.jpg) no-repeat center;
+	background-size:    cover;
+	color:              white;
+	font-size:          2.4rem;
+}
+
+.wedo__inner>*:not(:last-child) {
+	margin-bottom:    5rem;
+}
+
+.wedo i {
+	font-size:       6rem;
+	margin-right:    2rem;
+}
+
+.wedo__item {
+	display:        flex;
+	align-items:    center;
+	width:          calc((100% - 5rem * 2) * 0.33333);
+}
+
+.wedo__item:not(:last-child) {
+	margin-right:    50px;
+}
+
+.wedo__first {
+	display:            flex;
+	justify-content:    space-between;
+	align-items:        center;
+}
+
+
+.wedo__second {
+	justify-content:    center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* COURSES */
+
+.courses {
+	position:       relative;
+	overflow:       hidden;
+	--python1:      rgba(228, 242, 255, 1);
+	--python2:      rgba(2, 119, 189, 0.2);
+	--python3:      rgba(2, 119, 189, 1);
+	--robo1:        rgba(250, 249, 240, 1);
+	--robo2:        rgba(69, 90, 100, 0.2);
+	--robo3:        rgba(69, 90, 100, 1);
+	--treeDmax1:    rgba(240, 249, 250, 1);
+	--treeDmax2:    rgba(0, 131, 143, 0.2);
+	--treeDmax3:    rgba(0, 131, 143, 1);
+	--Csharp1:      rgba(240, 240, 250, 1);
+	--Csharp2:      rgba(150, 85, 245, 0.2);
+	--Csharp3:      rgba(150, 85, 245, 1);
+	--android1:     rgba(240, 250, 240, 1);
+	--android2:     rgba(124, 179, 66, 0.2);
+	--android3:     rgba(124, 179, 66, 1);
+	--twoD1:        rgba(250, 240, 245, 1);
+	--twoD2:        rgba(198, 13, 13, 0.2);
+	--twoD3:        rgba(198, 13, 13, 1);
+}
+
+.courses__inner {
+	display:           flex;
+	flex-direction:    column;
+	align-items:       center;
+}
+
+
+.courses__background {
+	position:           absolute;
+	left:               0;
+	top:                0;
+	width:              100%;
+	height:             100%;
+	background:         url(media/courses_backgr.png);
+	background-size:    contain;
+	animation:                scroll linear 100s infinite;
+	z-index:            -100;
+	opacity:            0.2;
+}
+
+@keyframes scroll {
+	from {
+		background-position:    0 0;
+	}
+
+	to {
+		background-position:    -300vh 0;
+	}
+}
+
+
+
+.courses__inner>*:not(:last-child) {
+	margin-bottom:    30px;
+}
+
+.courses__cards {
+	display:            flex;
+	justify-content:    space-between;
+	width:              100%;
+}
+
+.courses__card {
+	display:            flex;
+	flex-direction:     column;
+	align-items:        center;
+	justify-content:    space-between;
+	padding:            30px;
+	border-radius:      40px;
+	width:              calc((100% - 3rem * 2) * 0.33333);
+	text-align:         center;
+}
+
+.courses__card>*:not(:last-child) {
+	margin-bottom:    1.5rem;
+}
+
+.courses__card__img {
+	display:            flex;
+	align-items:        center;
+	justify-content:    center;
+	overflow:           hidden;
+	min-width:          90px;
+	min-height:         90px;
+	max-width:          90px;
+	max-height:         90px;
+}
+
+.courses__card__img>img {
+	max-width:     100%;
+	max-height:    100%;
+}
+
+.courses__card>*:nth-child(2) {
+	font-weight:    700;
+}
+
+.courses__card>*:nth-child(3) {
+	font-size:    2rem;
+}
+
+.courses__card__buttons {
+	width:              100%;
+	display:            flex;
+	justify-content:    space-between;
+}
+
+.courses__card__buttons>* {
+	font-size:    2rem;
+}
+
+/* COURSES COLORS */
+
+/* Python */
+.c__python {
+	background-color:    var(--python1);
+	box-shadow:          0 0 50px var(--python2);
+}
+
+.c__python button:first-child {
+	color:               var(--python3);
+	background-color:    var(--python2);
+}
+
+.c__python button:first-child::before {
+	background-color:    var(--python3);
+}
+
+.c__python button:last-child {
+	background-color:    var(--python3);
+}
+
+.c__python button:last-child:hover {
+	box-shadow:    0 0 10px var(--python3);
+}
+
+/* Robo */
+.c__robo {
+	background-color:    var(--robo1);
+	box-shadow:          0 0 50px var(--robo2);
+}
+
+.c__robo button:first-child {
+	color:               var(--robo3);
+	background-color:    var(--robo2);
+}
+
+.c__robo button:first-child::before {
+	background-color:    var(--robo3);
+}
+
+.c__robo button:last-child {
+	background-color:    var(--robo3);
+}
+
+.c__robo button:last-child:hover {
+	box-shadow:    0 0 10px var(--robo3);
+}
+
+/* 3D */
+.c__3d {
+	background-color:    var(--treeDmax1);
+	box-shadow:          0 0 50px var(--reeDmax2);
+}
+
+.c__3d button:first-child {
+	color:               var(--treeDmax3);
+	background-color:    var(--treeDmax2);
+}
+
+.c__3d button:first-child::before {
+	background-color:    var(--treeDmax3);
+}
+
+.c__3d button:last-child {
+	background-color:    var(--treeDmax3);
+}
+
+.c__3d button:last-child:hover {
+	box-shadow:    0 0 10px var(--treeDmax3);
+}
+
+/* C# */
+.c__sharp {
+	background-color:    var(--Csharp1);
+	box-shadow:          0 0 50px var(--Csharp2);
+}
+
+.c__sharp button:first-child {
+	color:               var(--Csharp3);
+	background-color:    var(--Csharp2);
+}
+
+.c__sharp button:first-child::before {
+	background-color:    var(--Csharp3);
+}
+
+.c__sharp button:last-child {
+	background-color:    var(--Csharp3);
+}
+
+.c__sharp button:last-child:hover {
+	box-shadow:    0 0 10px var(--Csharp3);
+}
+
+/* Android */
+.c__android {
+	background-color:    var(--android1);
+	box-shadow:          0 0 50px var(--android2);
+}
+
+.c__android button:first-child {
+	color:               var(--android3);
+	background-color:    var(--android2);
+}
+
+.c__android button:first-child::before {
+	background-color:    var(--android3);
+}
+
+.c__android button:last-child {
+	background-color:    var(--android3);
+}
+
+.c__android button:last-child:hover {
+	box-shadow:    0 0 10px var(--android3);
+}
+
+/* 2D */
+.c__2d {
+	background-color:    var(--twoD1);
+	box-shadow:          0 0 50px var(--twoD2);
+}
+
+.c__2d button:first-child {
+	color:               var(--twoD3);
+	background-color:    var(--twoD2);
+}
+
+.c__2d button:first-child::before {
+	background-color:    var(--twoD3);
+}
+
+.c__2d button:last-child {
+	background-color:    var(--twoD3);
+}
+
+.c__2d button:last-child:hover {
+	box-shadow:    0 0 10px var(--twoD3);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* MEDIA */
 @media (max-width: 1280px) {
@@ -199,27 +759,29 @@ section.section {}
 	.header {
 		font-size:    1.4rem;
 	}
+
 	.header__nav {
-		display: none;
+		display:    none;
 	}
+
 	.header__auth {
-		margin-left: auto;
-		margin-right: 20px;
+		margin-left:     auto;
+		margin-right:    20px;
 	}
+
 	.header__menu {
-		display: block;
+		display:    block;
 	}
 }
 
-@media (max-width: 770px) {
-	
-}
+@media (max-width:    770px) {}
 
-@media (max-width:    450px) {
+@media (max-width: 450px) {
 	.header {
-		padding: 10px;
+		padding:    10px;
 	}
+
 	.header__auth {
-		margin: 0;
+		margin:    0;
 	}
 }
