--- a/style.css
+++ b/style.css
@@ -482,27 +482,27 @@ i {
 	--python1:      rgba(228, 242, 255, 1);
 	--python2:      rgba(2, 119, 189, 0.2);
 	--python3:      rgba(2, 119, 189, 1);
-	--python4:      rgba(2, 119, 189, 0.35);
+	--python4:      rgba(2, 119, 189, .3);
 	--robo1:        rgba(250, 249, 240, 1);
 	--robo2:        rgba(69, 90, 100, 0.2);
 	--robo3:        rgba(69, 90, 100, 1);
-	--robo4:        rgba(69, 90, 100, 0.35);
+	--robo4:        rgba(69, 90, 100, .3);
 	--treeDmax1:    rgba(240, 249, 250, 1);
 	--treeDmax2:    rgba(0, 131, 143, 0.2);
 	--treeDmax3:    rgba(0, 131, 143, 1);
-	--treeDmax4:    rgba(0, 131, 143, 0.35);
+	--treeDmax4:    rgba(0, 131, 143, .3);
 	--Csharp1:      rgba(240, 240, 250, 1);
 	--Csharp2:      rgba(150, 85, 245, 0.2);
 	--Csharp3:      rgba(150, 85, 245, 1);
-	--Csharp4:      rgba(150, 85, 245, 0.35);
+	--Csharp4:      rgba(150, 85, 245, .3);
 	--android1:     rgba(240, 250, 240, 1);
 	--android2:     rgba(124, 179, 66, 0.2);
 	--android3:     rgba(124, 179, 66, 1);
-	--android4:     rgba(124, 179, 66, 0.35);
+	--android4:     rgba(124, 179, 66, .3);
 	--twoD1:        rgba(250, 240, 245, 1);
 	--twoD2:        rgba(198, 13, 13, 0.2);
 	--twoD3:        rgba(198, 13, 13, 1);
-	--twoD4:        rgba(198, 13, 13, 0.35);
+	--twoD4:        rgba(198, 13, 13, .3);
 }
 
 .courses__inner {
@@ -520,7 +520,7 @@ i {
 	height:             100%;
 	background:         url(media/courses_backgr.png);
 	background-size:    contain;
-	animation:                scroll linear 100s infinite;
+	animation:          scroll linear 100s infinite;
 	z-index:            -100;
 	opacity:            0.2;
 }
@@ -531,7 +531,7 @@ i {
 	}
 
 	to {
-		background-position:    -300vh 0;
+		background-position:    -450vh 0;
 	}
 }
 
@@ -556,11 +556,11 @@ i {
 	border-radius:      40px;
 	width:              calc((100% - 3rem * 2) * 0.33333);
 	text-align:         center;
-	transition: all .3s ease;
+	transition:         all .3s ease;
 }
 
 .courses__card:hover {
-	transform: scale(1.05);
+	transform:    scale(1.05);
 }
 
 .courses__card>*:not(:last-child) {
@@ -652,7 +652,7 @@ i {
 /* 3D */
 .c__3d {
 	background-color:    var(--treeDmax1);
-	box-shadow:          0 0 50px var(--reeDmax4);
+	box-shadow:          0 0 50px var(--treeDmax4);
 }
 
 .c__3d button:first-child {
